--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,11 +29,15 @@ dist.jar=${dist.dir}/WebSocketsPTS4.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.itext-pdfa-5.5.9.jar=lib/itext-pdfa-5.5.9.jar
+file.reference.itextpdf-5.5.9.jar=lib/itextpdf-5.5.9.jar
 file.reference.mysql-connector-java-5.1.38-bin.jar=lib/mysql-connector-java-5.1.38-bin.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-java-5.1.38-bin.jar}
+    ${file.reference.mysql-connector-java-5.1.38-bin.jar}:\
+    ${file.reference.itext-pdfa-5.5.9.jar}:\
+    ${file.reference.itextpdf-5.5.9.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
